{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 184,
  "lineage": "562f737f-2e00-0973-c7ef-211d15b083b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "security_group_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:security-group/sg-03ddc2fbf1eb71c81",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-03ddc2fbf1eb71c81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "default",
            "owner_id": "277343314400",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:internet-gateway/igw-0cf9f1caf6810c0da",
            "id": "igw-0cf9f1caf6810c0da",
            "owner_id": "277343314400",
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:loadbalancer/app/test-app/7a0bc13062404cef",
            "arn_suffix": "app/test-app/7a0bc13062404cef",
            "dns_name": "test-app-853899325.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:loadbalancer/app/test-app/7a0bc13062404cef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-app",
            "security_groups": [
              "sg-03ddc2fbf1eb71c81"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a06d719f7d02d4dd"
              },
              {
                "subnet_id": "subnet-0b6dfe3fc6fc484e1"
              },
              {
                "subnet_id": "subnet-0e7499f8758e25522"
              }
            ],
            "subnets": [
              "subnet-0a06d719f7d02d4dd",
              "subnet-0b6dfe3fc6fc484e1",
              "subnet-0e7499f8758e25522"
            ],
            "vpc_id": "vpc-04ae64f8ec43949cf",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_subnet.app_subnet_c1a",
            "aws_subnet.app_subnet_c1b",
            "aws_subnet.app_subnet_c1c",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:listener/app/test-app/7a0bc13062404cef/7c0a0dce3da10333",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:targetgroup/test-app/2806bc06c325f86b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:listener/app/test-app/7a0bc13062404cef/7c0a0dce3da10333",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:loadbalancer/app/test-app/7a0bc13062404cef",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.test_app",
            "aws_lb_target_group.test_app",
            "aws_subnet.app_subnet_c1a",
            "aws_subnet.app_subnet_c1b",
            "aws_subnet.app_subnet_c1c",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "test_app_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:targetgroup/test-app/2806bc06c325f86b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:listener-rule/app/test-app/7a0bc13062404cef/7c0a0dce3da10333/31b9918bdb539cc0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/success"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:listener-rule/app/test-app/7a0bc13062404cef/7c0a0dce3da10333/31b9918bdb539cc0",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:listener/app/test-app/7a0bc13062404cef/7c0a0dce3da10333",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "dependencies": [
            "aws_lb.test_app",
            "aws_lb_listener.test_app",
            "aws_lb_target_group.test_app",
            "aws_subnet.app_subnet_c1a",
            "aws_subnet.app_subnet_c1b",
            "aws_subnet.app_subnet_c1c",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:targetgroup/test-app/2806bc06c325f86b",
            "arn_suffix": "targetgroup/test-app/2806bc06c325f86b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/success",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:277343314400:targetgroup/test-app/2806bc06c325f86b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-app",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:route-table/rtb-0c46851ef3e7ab3c1",
            "id": "rtb-0c46851ef3e7ab3c1",
            "owner_id": "277343314400",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf9f1caf6810c0da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_Public_Route_Table"
            },
            "tags_all": {
              "Name": "devops_Public_Route_Table"
            },
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_internet_gateway.test_app",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet_c1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c211402ae2335acb",
            "route_table_id": "rtb-0c46851ef3e7ab3c1",
            "subnet_id": "subnet-0b6dfe3fc6fc484e1"
          },
          "dependencies": [
            "aws_internet_gateway.test_app",
            "aws_route_table.test_app",
            "aws_subnet.app_subnet_c1a",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet_c1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055eee92d13bb94e0",
            "route_table_id": "rtb-0c46851ef3e7ab3c1",
            "subnet_id": "subnet-0e7499f8758e25522"
          },
          "dependencies": [
            "aws_internet_gateway.test_app",
            "aws_route_table.test_app",
            "aws_subnet.app_subnet_c1b",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet_c1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0553677649b02a969",
            "route_table_id": "rtb-0c46851ef3e7ab3c1",
            "subnet_id": "subnet-0a06d719f7d02d4dd"
          },
          "dependencies": [
            "aws_internet_gateway.test_app",
            "aws_route_table.test_app",
            "aws_subnet.app_subnet_c1c",
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_c1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:subnet/subnet-0b6dfe3fc6fc484e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.16.0/24",
            "id": "subnet-0b6dfe3fc6fc484e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277343314400",
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_c1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:subnet/subnet-0e7499f8758e25522",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.17.0/24",
            "id": "subnet-0e7499f8758e25522",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277343314400",
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_c1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:subnet/subnet-0a06d719f7d02d4dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.18.0/24",
            "id": "subnet-0a06d719f7d02d4dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277343314400",
            "vpc_id": "vpc-04ae64f8ec43949cf"
          },
          "dependencies": [
            "aws_vpc.test_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277343314400:vpc/vpc-04ae64f8ec43949cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d2b02b457cf9c5f3",
            "default_route_table_id": "rtb-07c72950273ae6549",
            "default_security_group_id": "sg-03ddc2fbf1eb71c81",
            "dhcp_options_id": "dopt-085c7763bdbe319b8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ae64f8ec43949cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07c72950273ae6549",
            "owner_id": "277343314400"
          }
        }
      ]
    }
  ]
}